links en el footers, meta tags, documentos pdf

--- a/src/pages/gestion_documentos/index.html
+++ b/src/pages/gestion_documentos/index.html
@@ -2,31 +2,43 @@
   src="layout.html"
   locals='{ "id": "as__gestion_documentos", "top": "init" }'
 >
-  <block name="head">
-    <title>ASULADO - GESTIÓN DE DOCUMENTOS</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
-    <meta
-      name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
-    <meta
-      property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
-    />
-    <meta property="og:image" content="#" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
-    <meta
-      property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
-    />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
-  </block>
+<block name="head">
+  <title>Gestión de documentos | ASULADO Seguros de Vida</title>
+  <meta
+    name="title"
+    content="Gestión de documentos | ASULADO Seguros de Vida"
+  />
+  <meta
+    name="keywords"
+    content="Asulado seguros de vida teléfono, Novedades pensionados asulado, Asulado correo electrónico, pension anticipada de vejez"
+  />
+  <meta
+    name="description"
+    content="¡Sin salir de casa! Gestiona tus documentos en ASULADO Seguros de Vida. ¡Actúa hoy para un futuro mejor!"
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.asulado.com/" />
+  <meta
+    property="og:title"
+    content="Gestión de documentos | ASULADO Seguros de Vida"
+  />
+  <meta
+    property="og:description"
+    content="¡Sin salir de casa! Gestiona tus documentos en ASULADO Seguros de Vida. ¡Actúa hoy para un futuro mejor!"
+  />
+  <meta property="og:image" content="/assets/fb.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.asulado.com/" />
+  <meta
+    property="twitter:title"
+    content="Gestión de documentos | ASULADO Seguros de Vida"
+  />
+  <meta
+    property="twitter:description"
+    content="¡Sin salir de casa! Gestiona tus documentos en ASULADO Seguros de Vida. ¡Actúa hoy para un futuro mejor!"
+  />
+  <meta property="twitter:image" content="/assets/fb.png" />
+</block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
     <include
