--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,8 +1,11 @@
 <extends src="layout.html" locals='{ "id": "as__home", "top":"" }'>
   <block name="head">
     <title>ASULADO Seguros de Vida</title>
-
     <meta name="title" content="ASULADO Seguros de Vida" />
+    <meta
+      name="keywords"
+      content="Asulado seguros de vida, renta vitalicia, seguro previsional, pension anticipada"
+    />
     <meta
       name="description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
@@ -14,7 +17,7 @@
       property="og:description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
     <meta property="twitter:title" content="ASULADO Seguros de Vida" />
@@ -22,7 +25,7 @@
       property="twitter:description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="twitter:image" content="" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
