--- a/src/pages/nuestra_empresa/index.html
+++ b/src/pages/nuestra_empresa/index.html
@@ -3,44 +3,38 @@
   locals='{ "id": "as__nuestra_empresa", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - NUESTRA EMPRESA</title>
-
+    <title>Sobre nosotros |ASULADO Seguros de Vida</title>
+    <meta name="title" content="Sobre nosotros | ASULADO Seguros de Vida" />
     <meta
-      name="title"
-      content="ASULADO Seguros de Vida"
+      name="keywords"
+      content="Cómo funciona asulado, Qué es asulado, pension anticipada en colombia, seguro de pensiones"
     />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Descubre quiénes somos y cómo aseguramos tu futuro en ASULADO Seguros de Vida. ¡Tu tranquilidad es nuestro objetivo!"
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://www.asulado.com/"
-    />
+    <meta property="og:url" content="https://www.asulado.com/" />
     <meta
       property="og:title"
-      content="ASULADO Seguros de Vida"
+      content="Sobre nosotros | ASULADO Seguros de Vida"
     />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Descubre quiénes somos y cómo aseguramos tu futuro en ASULADO Seguros de Vida. ¡Tu tranquilidad es nuestro objetivo!"
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://www.asulado.com/"
-    />
+    <meta property="twitter:url" content="https://www.asulado.com/" />
     <meta
       property="twitter:title"
-      content="ASULADO Seguros de Vida"
+      content="Sobre nosotros | ASULADO Seguros de Vida"
     />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Descubre quiénes somos y cómo aseguramos tu futuro en ASULADO Seguros de Vida. ¡Tu tranquilidad es nuestro objetivo!"
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
