--- a/src/pages/pension_invalidez/index.html
+++ b/src/pages/pension_invalidez/index.html
@@ -1,31 +1,40 @@
-<extends
-  src="layout.html"
-  locals='{ "id": "as__rv_invalidez", "top": "init" }'
->
+<extends src="layout.html" locals='{ "id": "as__rv_invalidez", "top": "init" }'>
   <block name="head">
-    <title>ASULADO - RENTA VITALICIA POR INVALIDEZ</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
+    <title>Pensión por invalidez | ASULADO Seguros de Vida</title>
+    <meta
+      name="title"
+      content="Pensión por invalidez | ASULADO Seguros de Vida"
+    />
+    <meta
+      name="keywords"
+      content="pensión de invalidez, renta vitalicia por invalidez, seguro por invalidez, requisitos para pension de invalidez, pension por invalidez cuanto pagan"
+    />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Nos comprometemos con tu seguridad. Descubre la pensión por invalidez en ASULADO. Cuida tu bienestar y el de tus seres queridos."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="og:title"
+      content="Pensión por invalidez | ASULADO Seguros de Vida"
+    />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Nos comprometemos con tu seguridad. Descubre la pensión por invalidez en ASULADO. Cuida tu bienestar y el de tus seres queridos."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="twitter:title"
+      content="Pensión por invalidez | ASULADO Seguros de Vida"
+    />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Nos comprometemos con tu seguridad. Descubre la pensión por invalidez en ASULADO. Cuida tu bienestar y el de tus seres queridos."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
