--- a/src/pages/pension_sobreviviencia/index.html
+++ b/src/pages/pension_sobreviviencia/index.html
@@ -3,29 +3,41 @@
   locals='{ "id": "as__rv_sobreviviencia", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - RENTA VITALICIA POR SOBREVIVENCIA</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
+    <title>Pensión por sobrevivencia | ASULADO Seguros de Vida</title>
+    <meta
+      name="title"
+      content="Pensión por sobrevivencia | ASULADO Seguros de Vida"
+    />
+    <meta
+      name="keywords"
+      content="Seguro previsional de invalidez y sobrevivencia, renta vitalicia, seguro previsional"
+    />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Protege a tus seres queridos con la pensión por sobrevivencia de ASULADO. ¿Cuáles son sus beneficios? Encuentra preguntas frecuentes aquí."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="og:title"
+      content="Pensión por sobrevivencia | ASULADO Seguros de Vida"
+    />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Protege a tus seres queridos con la pensión por sobrevivencia de ASULADO. ¿Cuáles son sus beneficios? Encuentra preguntas frecuentes aquí."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="twitter:title"
+      content="Pensión por sobrevivencia | ASULADO Seguros de Vida"
+    />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="Protege a tus seres queridos con la pensión por sobrevivencia de ASULADO. ¿Cuáles son sus beneficios? Encuentra preguntas frecuentes aquí."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
