--- a/src/pages/preguntas_frecuentes/index.html
+++ b/src/pages/preguntas_frecuentes/index.html
@@ -1,28 +1,42 @@
 <extends src="layout.html" locals='{ "id": "as__faqs", "top": "init" }'>
   <block name="head">
-    <title>ASULADO - PREGUNTAS FRECUENTES</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
+    <title>
+      Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida
+    </title>
+    <meta
+      name="title"
+      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
+    <meta
+      name="keywords"
+      content="Qué es asulado, Cómo funciona asulado, Qué es una renta vitalicia, que es un seguro previsional, que es vitalicio"
+    />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cuánto recibes de renta vitalicia?, ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="og:title"
+      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cuánto recibes de renta vitalicia?, ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="twitter:title"
+      content="Preguntas frecuentes | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cuánto recibes de renta vitalicia?, ¿cómo ser beneficiario de una pensión por sobrevivencia? Explora algunas preguntas frecuentes aquí"
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
