--- a/src/pages/renta_vitalicia/index.html
+++ b/src/pages/renta_vitalicia/index.html
@@ -3,44 +3,38 @@
   locals='{ "id": "as__renta_vitalicia", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - RENTA VITALICIA</title>
-
+    <title>Renta Vitalicia | ASULADO Seguros de Vida</title>
+    <meta name="title" content="Renta Vitalicia | ASULADO Seguros de Vida" />
     <meta
-      name="title"
-      content="ASULADO Seguros de Vida"
+      name="keywords"
+      content="renta vitalicia, pensión vitalicia, renta vitalicia en colombia, renta vitalicia inmediata"
     />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Sabes cuándo recibes una Renta Vitalicia? Conoce todo lo que necesitas saber. Descubre más sobre tu seguridad financiera con ASULADO."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://www.asulado.com/"
-    />
+    <meta property="og:url" content="https://www.asulado.com/" />
     <meta
       property="og:title"
-      content="ASULADO Seguros de Vida"
+      content="Renta Vitalicia | ASULADO Seguros de Vida"
     />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Sabes cuándo recibes una Renta Vitalicia? Conoce todo lo que necesitas saber. Descubre más sobre tu seguridad financiera con ASULADO."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://www.asulado.com/"
-    />
+    <meta property="twitter:url" content="https://www.asulado.com/" />
     <meta
       property="twitter:title"
-      content="ASULADO Seguros de Vida"
+      content="Renta Vitalicia | ASULADO Seguros de Vida"
     />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Sabes cuándo recibes una Renta Vitalicia? Conoce todo lo que necesitas saber. Descubre más sobre tu seguridad financiera con ASULADO."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
