--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -3,29 +3,44 @@
   locals='{ "id": "as__gestion_documentos", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - SOLICITUDES</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
+    <title>
+      Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de
+      Vida
+    </title>
+    <meta
+      name="title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
+    <meta
+      name="keywords"
+      content="Asulado seguros de vida teléfono, Novedades pensionados asulado, Asulado correo electrónico, pension anticipada de vejez"
+    />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="og:title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="twitter:title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
