--- a/src/pages/terminos/index.html
+++ b/src/pages/terminos/index.html
@@ -3,9 +3,12 @@
   locals='{ "id": "as__gestion_documentos", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - SOLICITUDES</title>
-
+    <title>ASULADO Seguros de Vida</title>
     <meta name="title" content="ASULADO Seguros de Vida" />
+    <meta
+      name="keywords"
+      content="Asulado seguros de vida, renta vitalicia, seguro previsional, pension anticipada"
+    />
     <meta
       name="description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
@@ -17,7 +20,7 @@
       property="og:description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
     <meta property="twitter:title" content="ASULADO Seguros de Vida" />
@@ -25,7 +28,7 @@
       property="twitter:description"
       content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
@@ -39,153 +42,133 @@
         <div class="as__section_content as__terms">
           <div class="as__terms_info">
             <h2>Derechos de propiedad</h2>
-            <div>
-              <p>
-                Los contenidos, p&aacute;ginas y pantallas del sitio, junto con
-                el logo y la marca es propiedad de
-                <strong>Asulado Seguros de Vida S.A.</strong>. Se encuentran
-                debidamente registradas y protegidas por la Ley en Colombia y a
-                nivel internacional. En ning&uacute;n caso se podr&aacute; hacer
-                uso de alguno de ellos sin la expresa autorizaci&oacute;n de la
-                Compa&ntilde;&iacute;a.
-              </p>
-              <p>
-                La informaci&oacute;n, im&aacute;genes, videos, y otras
-                herramientas, contenidas en este sitio han sido creadas y
-                desarrolladas para el servicio y uso de nuestros pensionados y
-                visitantes. <strong>No est&aacute; permitido</strong> copiarlas,
-                modificarlas o reproducirlas, total o parcialmente, venderlas,
-                publicarlas o distribuirlas con fines comerciales.
-              </p>
-              <p>
-                Sin embargo, la informaci&oacute;n aqu&iacute; contenida puede
-                ser compartida utilizando las herramientas tales como enlaces a
-                redes sociales, compartir por correo electr&oacute;nico, entre
-                otras.
-              </p>
-            </div>
-          </div>
-          <div class="as__terms_info">
+
+            <p>
+              Los contenidos, páginas y pantallas del sitio, junto con el logo y
+              la marca son propiedad de ASULADO Seguros de Vida S.A. Se
+              encuentran debidamente registradas y protegidas por la Ley en
+              Colombia y a nivel internacional. En ningún caso se podrá hacer
+              uso de alguno de ellos sin la expresa autorización de la compañía.
+            </p>
+
+            <p>
+              La información, imágenes, videos, y otras herramientas, contenidas
+              en este sitio han sido creadas y desarrolladas para el servicio y
+              uso de nuestros pensionados y visitantes. No está permitido
+              copiarlas, modificarlas o reproducirlas, total o parcialmente;
+              venderlas, publicarlas o distribuirlas con fines comerciales.
+            </p>
+
+            <p>
+              Sin embargo, la información aquí contenida puede ser compartida
+              utilizando las herramientas tales como enlaces a redes sociales,
+              compartir por correo electrónico, entre otras.
+            </p>
+
             <h2>Responsabilidad</h2>
-            <div>
-              <ul>
-                <li>
-                  Asulado Seguros de Vida S.A. trabaja por que la
-                  informaci&oacute;n contenida en su sitio Web sea completa,
-                  exacta y actualizada.
-                </li>
-                <li>
-                  Toda la informaci&oacute;n que se proporcione a trav&eacute;s
-                  del sitio es concordante con la definida por la normativa
-                  vigente.
-                </li>
-                <li>
-                  Asulado Seguros de Vida S.A. garantiza la adopci&oacute;n de
-                  medidas que propendan a generar altos niveles de
-                  confidencialidad, disponibilidad e integridad de la
-                  informaci&oacute;n contenida en nuestro sitio.
-                </li>
-                <li>
-                  La informaci&oacute;n contenida en este sitio tiene
-                  car&aacute;cter informativo, educativo y comercial sobre los
-                  productos y servicios que ofrecemos y se habilita a
-                  disposici&oacute;n del p&uacute;blico en general.
-                </li>
-                <li>
-                  Asulado Seguros de Vida S.A. informa que el tratamiento dado a
-                  los datos personales recolectados a trav&eacute;s de este
-                  sitio, est&aacute;n enmarcados bajo la Ley sobre
-                  Protecci&oacute;n de Datos Personales (Ley 1581 de 2012). Los
-                  tratamientos espec&iacute;ficos puede encontrarlos
-                  <a
-                    href="/resource/1697133394000/Asulado_files/files/Politica-de-tratamiento-de-datos-personales-Asulado.pdf"
-                    >aqu&iacute;</a
-                  >.
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="as__terms_info">
+
+            <p>
+              ASULADO Seguros de Vida S.A. trabaja para que la información
+              contenida en su sitio web sea completa, exacta y actualizada.
+            </p>
+
+            <p>
+              Toda la información que se proporcione a través del sitio es
+              concordante con la definida por la normativa vigente.
+            </p>
+
+            <p>
+              ASULADO Seguros de Vida S.A. garantiza la adopción de medidas que
+              propendan a generar altos niveles de confidencialidad,
+              disponibilidad e integridad de la información contenida en nuestro
+              sitio.
+            </p>
+
+            <p>
+              La información contenida en este sitio tiene carácter informativo,
+              educativo y comercial sobre los productos y servicios que
+              ofrecemos y se habilita a disposición del público en general.
+            </p>
+
+            <p>
+              ASULADO Seguros de Vida S.A. informa que el tratamiento dado a los
+              datos personales recolectados a través de este sitio, están
+              enmarcados bajo la Ley sobre Protección de Datos Personales (Ley
+              1581 de 2012). Los tratamientos específicos puede encontrarlos
+              <a
+                href="/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf"
+                target="_blank"
+                >aquí</a
+              >.
+            </p>
+
             <h2>Enlaces a otros sitios</h2>
-            <div>
-              <p>
-                Este sitio puede contener enlaces o conexiones a sitios de
-                terceras entidades, respecto a los cuales Asulado Seguros de
-                Vida S.A. no se responsabiliza por sus pol&iacute;ticas o
-                contenido.
-              </p>
-              <p>
-                Asulado Seguros de Vida S.A. se reserva el derecho de agregar
-                y/o eliminar cualquier enlace o conexi&oacute;n a sitios de
-                terceras entidades, en cualquier momento, sin aviso previo ni
-                expresi&oacute;n de causa.
-              </p>
-            </div>
-          </div>
-          <div class="as__terms_info">
-            <h2>Interpretaci&oacute;n y Jurisdicci&oacute;n</h2>
-            <div>
-              <p>
-                Los presentes "T&eacute;rminos y condiciones" ser&aacute;n
-                interpretados y ejecutados de acuerdo a las leyes de la
-                Rep&uacute;blica de Colombia.
-              </p>
-              <p>
-                Los usuarios se someten a la jurisdicci&oacute;n de los jueces
-                de la Rep&uacute;blica de Colombia para efectos de la
-                resoluci&oacute;n de cualquier duda, dificultad o controversia
-                relacionada con todo o parte de los "T&eacute;rminos y
-                condiciones". Para todos los efectos legales derivados de este
-                instrumento, las partes fijan su domicilio en la ciudad de
-                Medell&iacute;n.
-              </p>
-            </div>
-          </div>
-          <div class="as__terms_info">
+
+            <p>
+              Este sitio puede contener enlaces o conexiones a sitios de
+              terceras entidades, respecto a los cuales ASULADO Seguros de Vida
+              S.A. no se responsabiliza por sus políticas o contenido.
+            </p>
+
+            <p>
+              ASULADO Seguros de Vida S.A. se reserva el derecho de agregar y/o
+              eliminar cualquier enlace o conexión a sitios de terceras
+              entidades, en cualquier momento, sin aviso previo ni expresión de
+              causa.
+            </p>
+
+            <h2>Interpretación y Jurisdicción</h2>
+
+            <p>
+              Los presentes "Términos y condiciones" serán interpretados y
+              ejecutados de acuerdo a las leyes de la República de Colombia.
+            </p>
+
+            <p>
+              Los usuarios se someten a la jurisdicción de los jueces de la
+              República de Colombia para efectos de la resolución de cualquier
+              duda, dificultad o controversia relacionada con todo o parte de
+              los "Términos y condiciones". Para todos los efectos legales
+              derivados de este instrumento, las partes fijan su domicilio en la
+              ciudad de Medellín.
+            </p>
+
             <h2>Preguntas y sugerencias</h2>
-            <div>
-              <p>
-                Si tienes alguna pregunta o sugerencia respecto de los
-                "T&eacute;rminos y condiciones", te invitamos a ponerte en
-                contacto con la Compa&ntilde;&iacute;a por medio del formulario
-                de Solicitudes o Peticiones que encontrar&aacute;s en la parte
-                superior.
-              </p>
-              <p>
-                El ingreso a este sitio y el uso de la informaci&oacute;n
-                contenida en &eacute;l constituyen acuerdo expreso del usuario
-                con los "T&eacute;rminos y condiciones" aqu&iacute; expresados.
-              </p>
-            </div>
-          </div>
-          <div class="as__terms_info">
-            <h2>Terceros con los que se compartir&aacute;n tus datos</h2>
-            <div>
-              <p>
-                Asulado en el desarrollo de su objeto social y en aras de
-                brindarte una oferta de servicios a tu medida, comparte tus
-                datos personales con algunos proveedores y/o aliados. Los cuales
-                relacionamos a continuaci&oacute;n:
-              </p>
-              <ul>
-                <li>
-                  <strong>Protecci&oacute;n S.A:</strong> Contrataci&oacute;n
-                  Renta Vitalicia
-                </li>
-                <li>
-                  <strong>Konecta - MULTIENLACE S.A.S:</strong> Proveedor de
-                  operaciones - L&iacute;nea de Atenci&oacute;n
-                </li>
-                <li>
-                  <strong>ERNST Y YOUNG AUDIT S.A.S:</strong> Revisor&iacute;a
-                  Fiscal
-                </li>
-                <li>
-                  <strong>DEXPRO S.A.S:</strong> Servicios de
-                  Investigaci&oacute;n
-                </li>
-              </ul>
-            </div>
+
+            <p>
+              Si tienes alguna pregunta o sugerencia respecto de los "Términos y
+              condiciones", te invitamos a ponerte en contacto con la compañía
+              por medio del formulario de Solicitudes o Peticiones que
+              encontrarás en la parte superior.
+            </p>
+
+            <p>
+              El ingreso a este sitio y el uso de la información contenida en él
+              constituyen acuerdo expreso del usuario con los "Términos y
+              condiciones" aquí expresados.
+            </p>
+
+            <h2>Terceros con los que se compartirán tus datos</h2>
+
+            <p>
+              ASULADO, en el desarrollo de su objeto social y en aras de
+              brindarte una oferta de servicios a tu medida, comparte tus datos
+              personales con algunos proveedores y/o aliados. Los cuales
+              relacionamos a continuación:
+            </p>
+
+            <ul>
+              <li>Protección S.A: Contratación Renta Vitalicia.</li>
+
+              <li>
+                Konecta - MULTIENLACE S.A.S: Proveedor de operaciones - Línea de
+                Atención.
+              </li>
+
+              <li>ERNST Y YOUNG AUDIT S.A.S: Revisoría Fiscal.</li>
+
+              <li>DEXPRO S.A.S: Servicios de Investigación.</li>
+            </ul>
           </div>
         </div>
       </div>
