--- a/src/pages/seguro_previsional/index.html
+++ b/src/pages/seguro_previsional/index.html
@@ -3,29 +3,38 @@
   locals='{ "id": "as__seguro_previsional", "top": "init" }'
 >
   <block name="head">
-    <title>ASULADO - SEGURO PREVISIONAL</title>
-
-    <meta name="title" content="ASULADO Seguros de Vida" />
+    <title>Seguro Previsional | ASULADO Seguros de Vida</title>
+    <meta name="title" content="Seguro Previsional | ASULADO Seguros de Vida" />
+    <meta
+      name="keywords"
+      content="seguro previsional, seguros previsionales, Seguro previsional colombia, que es el seguro previsional"
+    />
     <meta
       name="description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cómo ser beneficiario de un Seguro Previsional? Garantiza tu futuro con el Seguro de ASULADO. Descubre beneficios y más información de interés aquí."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.asulado.com/" />
-    <meta property="og:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="og:title"
+      content="Seguro Previsional | ASULADO Seguros de Vida"
+    />
     <meta
       property="og:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cómo ser beneficiario de un Seguro Previsional? Garantiza tu futuro con el Seguro de ASULADO. Descubre beneficios y más información de interés aquí."
     />
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="/assets/fb.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.asulado.com/" />
-    <meta property="twitter:title" content="ASULADO Seguros de Vida" />
+    <meta
+      property="twitter:title"
+      content="Seguro Previsional | ASULADO Seguros de Vida"
+    />
     <meta
       property="twitter:description"
-      content="Descubre la seguridad financiera con ASULADO Seguros de Vida. Encuentra consejos, bienestar financiero, tips y más información."
+      content="¿Cómo ser beneficiario de un Seguro Previsional? Garantiza tu futuro con el Seguro de ASULADO. Descubre beneficios y más información de interés aquí."
     />
-    <meta property="twitter:image" content="https://www.asulado.com/" />
+    <meta property="twitter:image" content="/assets/fb.png" />
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
