links en el footers, meta tags, documentos pdf, no blog

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@
     <include src="home/servicios.html"></include>
     <include src="home/cifras.html"></include>
     <include src="home/documentos.html"></include>
-    <include src="home/blog.html" locals='{ "button": "VER TODOS"}'></include>
+    <!-- <include src="home/blog.html" locals='{ "button": "VER TODOS"}'></include> -->
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
