botones chaty whap, footer y documentos read

--- a/src/pages/consumidor_financiero/index.html
+++ b/src/pages/consumidor_financiero/index.html
@@ -548,7 +548,7 @@
                 soluci&oacute;n eficiente a tus inquietudes y comentarios.
               </p>
               <p>
-                <a href="#">
+                <a href="/solicitudes">
                 Conoce m&aacute;s haciendo <a>clic ac&aacute;.</a>
               </p>
             </div>
