--- a/src/pages/suscribete/index.html
+++ b/src/pages/suscribete/index.html
@@ -46,7 +46,7 @@
   <block name="content">
     <include
       src="top.html"
-      locals='{ "bg": "bg-BG-1", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "", "title2": "Suscríbete" }'
+      locals='{ "bg": "bg-BG-1", "image": "top_suscribete.webp", "t1start":"1", "t2start":"3", "title1": "", "title2": "Suscríbete" }'
     ></include>
 
     <section class="as__section as__g_solicitudes">
