--- a/src/pages/suscribete/index.html
+++ b/src/pages/suscribete/index.html
@@ -60,8 +60,7 @@
               <h3>
                 Queremos estar más cerca de ti, por eso, para tu comodidad,
                 podrás elegir qué información quieres recibir de ASULADO cada
-                mes y el medio de tu preferencia.
-              </h3>
+                mes.
             </div>
           </div>
         </div>
