Ajustes de imagenes, consumidor financiero, solic

--- a/src/pages/solicitudes/index.html
+++ b/src/pages/solicitudes/index.html
@@ -65,8 +65,19 @@
                   <i> </i>
                   <p>
                     También puedes comunicarte a nuestra línea gratuita nacional
-                    01 8000 412 854 o, si estás ubicado en Medellín al (604) 402
-                    6876.
+                    <a
+                      href="tel:018000412854"
+                      target="_blank"
+                      class="inline-block"
+                      >01 8000 412 854</a
+                    >
+                    o si estás ubicado en Medellín al
+                    <a
+                      href="tel:6044026876"
+                      target="_blank"
+                      class="inline-block"
+                      >(604) 402 6876</a
+                    >.
                   </p>
                 </div>
               </div>
