--- a/src/pages/solicitudes_caso/index.html
+++ b/src/pages/solicitudes_caso/index.html
@@ -2,46 +2,46 @@
   src="layout.html"
   locals='{ "id": "as__gestion_documentos", "top": "init" }'
 >
-<block name="head">
-  <title>
-    Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de
-    Vida
-  </title>
-  <meta
-    name="title"
-    content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
-  />
-  <meta
-    name="keywords"
-    content="Asulado seguros de vida teléfono, Novedades pensionados asulado, Asulado correo electrónico, pension anticipada de vejez"
-  />
-  <meta
-    name="description"
-    content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
-  />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.asulado.com/" />
-  <meta
-    property="og:title"
-    content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
-  />
-  <meta
-    property="og:description"
-    content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
-  />
-  <meta property="og:image" content="/assets/fb.png" />
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://www.asulado.com/" />
-  <meta
-    property="twitter:title"
-    content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
-  />
-  <meta
-    property="twitter:description"
-    content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
-  />
-  <meta property="twitter:image" content="/assets/fb.png" />
-</block>
+  <block name="head">
+    <title>
+      Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de
+      Vida
+    </title>
+    <meta
+      name="title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
+    <meta
+      name="keywords"
+      content="Asulado seguros de vida teléfono, Novedades pensionados asulado, Asulado correo electrónico, pension anticipada de vejez"
+    />
+    <meta
+      name="description"
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.asulado.com/" />
+    <meta
+      property="og:title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
+    <meta
+      property="og:description"
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
+    />
+    <meta property="og:image" content="/assets/fb.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.asulado.com/" />
+    <meta
+      property="twitter:title"
+      content="Solicitudes o peticiones | ASULADO Seguros de Vida | ASULADO Seguros de Vida"
+    />
+    <meta
+      property="twitter:description"
+      content="¡Estamos atentos a tus necesidades! Gestiona todas tus solicitudes de ASULADO desde tu casa, así de simple y sencillo."
+    />
+    <meta property="twitter:image" content="/assets/fb.png" />
+  </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
     <include
@@ -65,8 +65,19 @@
                   <i></i>
                   <p>
                     También puedes comunicarte a nuestra línea gratuita nacional
-                    01 8000 412 854 o, si estás ubicado en Medellín al (604) 402
-                    6876.
+                    <a
+                      href="tel:018000412854"
+                      target="_blank"
+                      class="inline-block"
+                      >01 8000 412 854</a
+                    >
+                    o si estás ubicado en Medellín al
+                    <a
+                      href="tel:6044026876"
+                      target="_blank"
+                      class="inline-block"
+                      >(604) 402 6876</a
+                    >.
                   </p>
                 </div>
               </div>
