--- a/src/pages/solicitudes_caso/index.html
+++ b/src/pages/solicitudes_caso/index.html
@@ -46,7 +46,7 @@
   <block name="content">
     <include
       src="top.html"
-      locals='{ "bg": "bg-BG-1", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Gestiona", "title2": "tus PQRS" }'
+      locals='{ "bg": "bg-BG-1", "image": "top_solicitudes.webp", "t1start":"1", "t2start":"3", "title1": "Gestiona", "title2": "tus solicitudes" }'
     ></include>
 
     <section class="as__section as__g_solicitudes">
